# lottery

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  README_KR.md  build.sh  lottery_data.json  lottery_data.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml  update-lottery.yml
docs/: index.html  index.js  lottery_data.json  styles.css
docs/pkg/: lottery.d.ts  lottery.js  lottery_bg.wasm  lottery_bg.wasm.d.ts  package.json
scripts/: recommend.py  update_lottery_data.py
src/: lib.rs  main.rs
static/: 601-1187.xls  601-1204.xls
www/: index.html  index.js  lottery_data.json  styles.css
