[package]
name = "lottery"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

# CLI 전용 의존성 (WASM에서는 제외)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
scraper = "0.19"
encoding_rs = "0.8"
